--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "bun-install": "bun install && npx patch-package"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
+    "patch-package": "^8.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-spring": "^9.7.4",
