--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build && npx patch-package",
     "start": "next start",
     "lint": "next lint",
-    "bun-install": "bun install && npx patch-package"
+    "bun-install": "bun install && npx patch-package",
+    "postinstall": "npx patch-package"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
