--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cobe": "^0.6.3",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^15.4.4",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18",
@@ -33,7 +33,7 @@
     "react-spring": "^9.7.4",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "tech-stack-icons": "^2.1.0",
+    "tech-stack-icons": "^3.3.2",
     "three": "^0.169.0"
   },
   "devDependencies": {
