--- a/package.json
+++ b/package.json
@@ -11,39 +11,42 @@
     "postinstall": "bun patch-package"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@react-three/drei": "^9.114.6",
-    "@react-three/fiber": "^8.17.10",
-    "@vercel/analytics": "^1.3.2",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/drei": "^10.6.0",
+    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@vercel/analytics": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "^12.23.11",
     "lucide-react": "^0.453.0",
+    "motion": "^12.23.9",
     "next": "^15.4.4",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-spring": "^9.7.4",
-    "tailwind-merge": "^2.5.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-spring": "^9.7.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tech-stack-icons": "^3.3.2",
-    "three": "^0.169.0"
+    "three": "^0.178.0",
+    "three-globe": "^2.43.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.19.9",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@types/three": "^0.178.1",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   }
 }
