--- a/package.json
+++ b/package.json
@@ -26,17 +26,16 @@
     "framer-motion": "^12.23.11",
     "lucide-react": "^0.453.0",
     "motion": "^12.23.9",
-    "next": "^15.4.4",
+    "next": "^16.1.1",
+    "next-intl": "^4.6.1",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-spring": "^9.7.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "tech-stack-icons": "^3.3.2",
-    "three": "^0.178.0",
-    "three-globe": "^2.43.0"
+    "tech-stack-icons": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.19.9",
