--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "postinstall": "bun patch-package"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
+    "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.6.0",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@vercel/analytics": "^1.5.0",
@@ -24,7 +26,9 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "framer-motion": "^12.23.11",
-    "lucide-react": "^0.453.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.563.0",
+    "maplibre-gl": "^5.17.0",
     "motion": "^12.23.9",
     "next": "^16.1.1",
     "next-intl": "^4.6.1",
@@ -32,15 +36,19 @@
     "patch-package": "^8.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-leaflet": "^5.0.0",
     "react-spring": "^9.7.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tech-stack-icons": "^3.3.2"
   },
   "devDependencies": {
+    "@iconify-json/logos": "^1.2.10",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20.19.9",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/react-leaflet": "^3.0.0",
     "@types/three": "^0.178.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
