--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "bun-install": "bun install",
-    "postinstall": "bun patch-package"
+    "bun-install": "bun install"
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
@@ -21,6 +20,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.6.0",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "@tanstack/react-query": "^5.90.20",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,6 +34,7 @@
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^19.2.3",
+    "react-activity-calendar": "^3.1.1",
     "react-dom": "^19.2.3",
     "react-leaflet": "^5.0.0",
     "react-spring": "^9.7.5",
